--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
 
 .body-wrapper {
   padding-top: 55px;
-  min-height: calc(100vh - 55px - 45px);
+  min-height: calc(100vh - 150px);
 }
 
 .center-content {
@@ -83,6 +83,36 @@ nav.menu {
 
 .nav-bar .center-content {
   display: flex;
+}
+
+.home-image {
+  object-fit: cover;
+  width: 100%;
+  height: 530px;
+  opacity: 0.7;
+}
+
+.header-section {
+  position: relative;
+  background-color: black;
+}
+
+.header-section .main-title {
+  display: flex;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.header-section span {
+  max-width: 500px;
+  font-size: 35px;
 }
 
 .post-vertical,
@@ -173,6 +203,7 @@ h2 {
   text-transform: uppercase;
   letter-spacing: 1px;
   display: inline-block;
+  cursor: pointer;
 }
 
 .post-cta:hover {
@@ -181,11 +212,11 @@ h2 {
 }
 
 .slider {
-  margin-top: 10px;
   width: 40px;
   height: 40px;
   background-color: white;
   border: solid 1px var(--border);
+  margin-right: 10px;
 }
 
 .cta-main {
@@ -193,10 +224,12 @@ h2 {
   font-size: 12px;
   font-weight: bold;
   text-transform: uppercase;
+  text-decoration: none;
   padding: 10px;
   border: 0;
   background-color: var(--accent);
   color: white;
+  cursor: pointer;
 }
 
 .cta-main:hover {
@@ -205,11 +238,35 @@ h2 {
   border: solid 1px var(--accent);
 }
 
+.cta-main:hover svg path {
+  stroke: var(--accent);
+}
+
+.cta-main span {
+  display: inline-block;
+}
+
+.home-buttons {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.home-buttons .cta-main span,
+.home-buttons .cta-main svg {
+  vertical-align: middle;
+}
+
+.home-buttons .cta-main svg {
+  margin-left: 5px;
+}
+
 footer {
   width: 400px;
   height: 100%;
   margin: auto;
   text-align: center;
+  margin-top: 50px;
 }
 
 .footer-line {
@@ -235,6 +292,10 @@ footer p {
 
 .about-left {
   flex: 1;
+}
+
+.about-left h1 {
+  margin-top: 100px;
 }
 
 h1 {
@@ -270,7 +331,8 @@ h1 {
   flex-direction: column;
   flex-basis: 100%;
   border: solid 1px var(--border);
-  max-width: 485px;
+  max-width: calc(50% - 15px);
+  box-sizing: border-box;
   padding: 20px;
 }
 
@@ -278,6 +340,86 @@ h1 {
   width: 100%;
   height: 276px;
   object-fit: cover;
+}
+
+.all-posts-cta {
+  margin: 0 auto;
+}
+
+.border-image {
+  border: solid 1px var(--border);
+  padding: 20px;
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+
+.border-image img {
+  width: 100%;
+}
+
+.single-center {
+  max-width: 880px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.single-center p {
+  line-height: 22px;
+}
+
+.single-center h1 {
+  margin-top: 0px;
+}
+
+.single-center .date-post {
+  margin-top: 60px;
+}
+
+.center-contacts {
+  max-width: 487px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+form {
+  max-width: 490px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+input,
+textarea {
+  width: 100%;
+  font-size: 14px;
+  padding: 15px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  border: solid 1px var(--border);
+  color: var(--text);
+  font-family: var(--textfont);
+}
+
+form .cta-main {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.button-message {
+  margin-top: 10px;
+}
+
+.socials img {
+  margin-right: 15px;
+  margin-left: 15px;
+  margin-top: 20px;
+}
+
+textarea {
+  min-height: 205px;
+  max-height: 205px;
+  min-width: 100%;
+  max-width: 100%;
 }
 
 /* RESPONSIVE RULES */
