--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ nav.menu {
   flex: 1;
 }
 
-.posts-pg {
+.post-content p {
   font-family: var(--text);
   font-size: 14px;
   color: var(--text);
@@ -143,10 +143,13 @@ nav.menu {
 
 .post-vertical img {
   width: 100%;
+  max-height: 350px;
+  object-fit: cover;
 }
 
 .post-horiz img {
   width: 155px;
+  object-fit: cover;
 }
 
 h2 {
