--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,10 @@ nav a {
   color: var(--text);
 }
 
+nav a:hover {
+  color: black;
+}
+
 nav.menu {
   display: flex;
   flex: 1;
@@ -222,6 +226,7 @@ h2 {
   letter-spacing: 1px;
   display: inline-block;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .post-cta:hover {
@@ -378,6 +383,11 @@ h1 {
   margin-top: 20px;
 }
 
+.back-cta {
+  display: flex;
+  justify-content: center;
+}
+
 .border-image {
   border: solid 1px var(--border);
   padding: 20px;
@@ -516,6 +526,28 @@ textarea {
 
 .full-content a {
   color: var(--text);
+}
+
+.loader {
+  border: 8px solid var(--border); /* grey */
+  border-top: 8px solid var(--accent); /* green */
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 120px;
+  margin-bottom: 120px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /* RESPONSIVE RULES */
